# PINNs

./: .gitignore  README.md  pyproject.toml
cooling/: equations.py  main_thermo.py  networks.py
harmonic_motion/: equations.py  main_HM.py  networks.py
