[project]
name = "pinns"
version = "0.1.0"
description = "Physics informed neural networks (PINNs)"
authors = [
    {name = "MicheleCarletti",email = "michelecarletti98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
